--- a/GitRepository/Storyboards/Base.lproj/Main.storyboard
+++ b/GitRepository/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ps7-LW-Z46">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y3H-5e-pNs">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,49 +10,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Login View Controller-->
-        <scene sceneID="raz-n6-pi9">
-            <objects>
-                <viewController storyboardIdentifier="LoginVC" id="jjz-nv-GaK" customClass="LoginViewController" customModule="GitRepository" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3oa-Me-DjZ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rk4-su-lCs">
-                                <rect key="frame" x="60" y="550" width="255" height="72"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="rk4-su-lCs" secondAttribute="height" multiplier="53:15" id="LaO-FM-3KQ"/>
-                                </constraints>
-                                <state key="normal" backgroundImage="LoginButtonImage"/>
-                                <state key="selected" backgroundImage="LoginButtonImage"/>
-                                <state key="highlighted" backgroundImage="LoginButtonImage">
-                                    <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="loginRequest:" destination="jjz-nv-GaK" eventType="touchUpInside" id="VYj-q4-BpL"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="rk4-su-lCs" firstAttribute="centerX" secondItem="J7b-Ve-ESx" secondAttribute="centerX" id="2El-ng-6oJ"/>
-                            <constraint firstItem="J7b-Ve-ESx" firstAttribute="bottom" secondItem="rk4-su-lCs" secondAttribute="bottom" constant="45" id="Or4-AD-EBH"/>
-                            <constraint firstItem="J7b-Ve-ESx" firstAttribute="trailing" secondItem="rk4-su-lCs" secondAttribute="trailing" constant="60" id="mht-tb-qwo"/>
-                            <constraint firstItem="rk4-su-lCs" firstAttribute="leading" secondItem="J7b-Ve-ESx" secondAttribute="leading" constant="60" id="oV3-Se-Lpc"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="J7b-Ve-ESx"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="uQi-f2-nyZ"/>
-                    <connections>
-                        <outlet property="loginButton" destination="rk4-su-lCs" id="Anl-iB-JBy"/>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="toRepositories" id="Mty-hF-KZI"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bko-Ap-p2s" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="15" y="29"/>
-        </scene>
         <!--Repository View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -308,25 +265,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="992.79999999999995" y="26.53673163418291"/>
+            <point key="canvasLocation" x="1932" y="26.53673163418291"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="wpA-Ld-1UX">
+        <scene sceneID="bEu-VW-1Vs">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ps7-LW-Z46" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Y3H-5e-pNs" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="s2W-6K-Bo9">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XgW-co-kaI">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="jjz-nv-GaK" kind="relationship" relationship="rootViewController" id="T93-I1-FWm"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="WPV-Ui-Mfy"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pt4-X4-aQu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="any-1w-eWV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-862" y="27"/>
+            <point key="canvasLocation" x="992.79999999999995" y="26.53673163418291"/>
         </scene>
     </scenes>
     <resources>
@@ -335,6 +292,5 @@
         <image name="GitForkImage" width="255" height="257"/>
         <image name="GitStarImage" width="256" height="256"/>
         <image name="LoadMoreImage" width="100" height="100"/>
-        <image name="LoginButtonImage" width="318" height="90"/>
     </resources>
 </document>
